force-app/main/default/objects/TPM_Product_Hierarchy_Staging__c/TPM_Product_Hierarchy_Staging__c.object-meta.xml
<CustomObject>
    <description>Object that will serve as the staging table for Product Hierarchy records received from Performance Analyzer</description>
    <label>Product Hierarchy Staging</label>
    <nameField>
        <displayFormat>PH-{000000}</displayFormat>
        <label>Product Hierarchy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Hierarchy Staging</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>