force-app/main/default/objects/TPM_Product_Hierarchy_Staging__c/fields/TPM_Child_Prod_ID__c.field-meta.xml
<CustomField>
    <fullName>TPM_Child_Prod_ID__c</fullName>
    <description>External ID of the Child Product</description>
    <label>Child Product ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>