force-app/main/default/objects/TPM_Product_Hierarchy_Staging__c/fields/TPM_Child_Prod_NM__c.field-meta.xml
<CustomField>
    <fullName>TPM_Child_Prod_NM__c</fullName>
    <description>Name of the Child Product</description>
    <label>Child Product Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>