force-app/main/default/objects/TPM_Product_Hierarchy_Staging__c/fields/TPM_Convert_Status__c.field-meta.xml
<CustomField>
    <fullName>TPM_Convert_Status__c</fullName>
    <description>Conversion status of the Product Hierarchy Staging object to the standard Product Hierarchy object</description>
    <label>Convert Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>