force-app/main/default/objects/TPM_Product_Hierarchy_Staging__c/fields/TPM_Parnt_Prod_HrLvl__c.field-meta.xml
<CustomField>
    <fullName>TPM_Parnt_Prod_HrLvl__c</fullName>
    <description>Hierarchy Level of the Parent Product</description>
    <label>Parent Product Hierarchy Level Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top Node</fullName>
            </value>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>Report Group</fullName>
            </value>
            <value>
                <fullName>Battery Device Type</fullName>
            </value>
            <value>
                <fullName>Pack Size</fullName>
            </value>
            <value>
                <fullName>UPC/EAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>