force-app/main/default/objects/TPM_Product_Hierarchy_Staging__c/fields/TPM_Parnt_Prod_NM__c.field-meta.xml
<CustomField>
    <fullName>TPM_Parnt_Prod_NM__c</fullName>
    <description>Name of the Parent Product</description>
    <label>Parent Product Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>