force-app/main/default/objects/TPM_Product_Hierarchy_Staging__c/fields/TPM_Parnt_Prod_Number__c.field-meta.xml
<CustomField>
    <fullName>TPM_Parnt_Prod_Number__c</fullName>
    <description>Number of the Parent Product</description>
    <label>Parent Product Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>