force-app/main/default/objects/TPM_Product_Hierarchy_Staging__c/fields/TPM_Prod_Hrchy_End_DT__c.field-meta.xml
<CustomField>
    <fullName>TPM_Prod_Hrchy_End_DT__c</fullName>
    <description>End date of the product hierarchy relationship</description>
    <label>Product Hierarchy End Date</label>
    <type>Date</type>
</CustomField>