force-app/main/default/objects/TPM_Product_Hierarchy_Staging__c/fields/TPM_Prod_Hrchy_Strt_Dt__c.field-meta.xml
<CustomField>
    <fullName>TPM_Prod_Hrchy_Strt_Dt__c</fullName>
    <description>Start date of the product hierarchy relationship</description>
    <label>Product Hierarchy Start Date</label>
    <type>Date</type>
</CustomField>